сделал левую и правую части информации о товаре

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <div class="page">
       <h2 class="annoucment-bar">Free Delivery on all order above 150$</h2>
       <header class="navigation">
-        <div class="navigation__logo">
-          <img src="./images/logo.svg" alt="" class="navigation__logo-image" />
-          <h2 class="navigation__logo-text">Sid</h2>
-        </div>
+        <a href="#" class="navigation__logo"
+          ><img src="./images/logo.svg" alt="" class="navigation__logo-image" />Sid</a
+        >
         <div class="navigation__menu-items">
-          <a href="#" class="navigation__menu-item">Shop</a>
+          <a href="#" class="navigation__menu-item"
+            >Shop <img src="./images/Expand.svg" alt="" class="navigation__menu-icon"
+          /></a>
           <a href="#" class="navigation__menu-item">About us</a>
           <a href="#" class="navigation__menu-item">Compare</a>
           <a href="#" class="navigation__menu-item">FAQs</a>
@@ -95,6 +96,64 @@
                 >Z 5 Body Only</a
               >
               <a href="#" class="product-information__option-btn">24-50mm Lens Kit</a>
+            </div>
+            <div class="product-information__instock">
+              <div class="product-information__instock-quantity"></div>
+              <p class="product-information__instock-currently">Currently In Stock</p>
+            </div>
+            <div class="product-information__featured-specs">
+              <div class="product-information__feature">
+                <img src="./images/Chip.svg" alt="" class="product-information__feature-icon" />
+                <p class="product-information__feature-text">Expeed 6 Chip</p>
+              </div>
+              <div class="product-information__feature">
+                <img
+                  src="./images/objective.svg"
+                  alt=""
+                  class="product-information__feature-icon"
+                />
+                <p class="product-information__feature-text">Works with 24-50mm Lens</p>
+              </div>
+              <div class="product-information__feature">
+                <img
+                  src="./images/megapixels 1.svg"
+                  alt=""
+                  class="product-information__feature-icon"
+                />
+                <p class="product-information__feature-text">24.3 million Effective Pixels</p>
+              </div>
+              <div class="product-information__feature">
+                <img src="./images/Battery.svg" alt="" class="product-information__feature-icon" />
+                <p class="product-information__feature-text">
+                  EN-EL15c rechargeable Li-ion battery
+                </p>
+              </div>
+              <a href="#" class="product-information__feature-view-all">View All Tech Specs</a>
+            </div>
+            <div class="product-information__btns">
+              <a href="#" class="product-information__cart-btn">Add To Cart</a>
+              <a href="#" class="product-information__buy-btn">Buy It Now</a>
+            </div>
+            <div class="product-information__features">
+              <a href="#" class="product-information__feature"
+                ><img
+                  src="./images/Help.svg"
+                  alt=""
+                  class="product-information__feature-image"
+                />Got any questions?
+                <span class="product-information__feature-span">Contact us</span></a
+              >
+              <p class="product-information__feature">
+                <img
+                  src="./images/shiping.svg"
+                  alt=""
+                  class="product-information__feature-image"
+                />Free Shipping over $150
+              </p>
+              <a href="#" class="product-information__feature"
+                ><img src="./images/share.svg" alt="" class="product-information__feature-image" />
+                Share
+              </a>
             </div>
           </div>
         </div>
