добавил секцию промо

--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
         <div class="product-information__right-side">
           <div class="product-information__name-reviews">
             <h1 class="product-information__name">Nikon Z5</h1>
-            <div class="product-information__reviews">
+            <a href="#" class="product-information__reviews">
               <p class="product-information__reviews-number">4.2 (1653)</p>
               <img src="./images/star.svg" alt="" class="product-information__reviews-star" />
               <img src="./images/star.svg" alt="" class="product-information__reviews-star" />
               <img src="./images/star.svg" alt="" class="product-information__reviews-star" />
-              <img src="./images/star.svg" alt="" class="product-information__reviews-star" />
-            </div>
+              <img src="./images/star.svg" alt="" class="product-information__reviews-star"
+            /></a>
           </div>
           <p class="product-information__price">
             $899 <span class="product-information__old-price">$1,099.95</span>
@@ -157,6 +157,48 @@
             </div>
           </div>
         </div>
+      </section>
+      <section class="promo-marquee">
+        <h2 class="promo-marquee__text">USE&#160;CODE&#160;FRIDAY50&#160;FOR&#160;50%&#160;OFF</h2>
+        <h2 class="promo-marquee__text">USE&#160;CODE&#160;FRIDAY50&#160;FOR&#160;50%&#160;OFF</h2>
+        <h2 class="promo-marquee__text">USE&#160;CODE&#160;FRIDAY50&#160;FOR&#160;50%&#160;OFF</h2>
+        <h2 class="promo-marquee__text">USE&#160;CODE&#160;FRIDAY50&#160;FOR&#160;50%&#160;OFF</h2>
+        <h2 class="promo-marquee__text">USE&#160;CODE&#160;FRIDAY50&#160;FOR&#160;50%&#160;OFF</h2>
+        <h2 class="promo-marquee__text">USE&#160;CODE&#160;FRIDAY50&#160;FOR&#160;50%&#160;OFF</h2>
+      </section>
+      <section class="included">
+        <h2 class="included__title">What’s included</h2>
+        <div class="included__items">
+          <div class="included__item">
+            <img src="./images/DSLR.svg" alt="" class="included__img" />
+            <h3 class="included__name">Nikon Z5</h3>
+          </div>
+          <div class="included__item">
+            <img src="./images/lens20mm.svg" alt="" class="included__img" />
+            <h3 class="included__name">20mm Lens</h3>
+          </div>
+          <div class="included__item">
+            <img src="./images/Charger.svg" alt="" class="included__img" />
+            <h3 class="included__name">Charging Cable</h3>
+          </div>
+          <div class="included__item">
+            <img src="./images/Adobe Stock.svg" alt="" class="included__img" />
+            <h3 class="included__name">Adobe Stock Subscription</h3>
+          </div>
+        </div>
+      </section>
+      <section class="promo">
+        <div class="promo__copy">
+          <h3 class="promo__title">Expand your creative playground</h3>
+          <p class="promo__paraghraph">
+            Your full frame journey begins with the Z 5. Simple yet sophisticated, compact yet
+            powerful, the Z 5 is built to grow with you. It’s everything you’d expect from a full
+            frame mirrorless camera—intense detail, expansive views, brilliant low light
+            capabilities, 4K UHD video and more — plus all the innovative tools you need to push the
+            limits of your creativity.
+          </p>
+        </div>
+        <img src="./images/promo.png" alt="" class="promo__image" />
       </section>
     </div>
   </body>
