Добавил новый шрифт и сделал секцию extra-promo

--- a/index.html
+++ b/index.html
@@ -200,6 +200,56 @@
         </div>
         <img src="./images/promo.png" alt="" class="promo__image" />
       </section>
+      <section class="extra-promo">
+        <div class="extra-prommo__card">
+          <img src="./images/Chip.png" alt="" class="extra-prommo__image" />
+          <h3 class="extra-promo__title">Super powered.</h3>
+          <p class="extra-promo__paragraph">
+            Z 5 is powered by Nikon’s fast, comprehensive EXPEED 6 image processing system. It’s the
+            secret behind the camera’s sensational photo and video quality, autofocus performance,
+            low-light capabilities, distortion control, image clarity, color reproduction and more.
+          </p>
+        </div>
+        <div class="extra-prommo__card">
+          <img src="./images/Sutter-Speed.png" alt="" class="extra-prommo__image" />
+          <h3 class="extra-promo__title">The stability you crave.</h3>
+          <p class="extra-promo__paragraph">
+            Sharpness starts with stability, and Z 5 has one of the best in-camera image
+            stabilization systems available. NIKKOR Z lenses activate 5-axis VR image
+            stabilization—up to five stops* of stabilization in up to five directions
+          </p>
+        </div>
+        <div class="extra-prommo__card">
+          <img src="./images/Stability.png" alt="" class="extra-prommo__image" />
+          <h3 class="extra-promo__title">In the blink of an iris.</h3>
+          <p class="extra-promo__paragraph">
+            Freeze time with shutter speeds as fast as 1/8000 of a second—fast enough to capture
+            moments invisible to the naked eye. When shooting with wide aperture settings for
+            shallow depth-of-field and blurred backgrounds, that speed can also be used to control
+            your shot’s brightness.
+          </p>
+        </div>
+      </section>
+      <section class="reviews">
+        <h2 class="reviews__title">Don’t take our word for it</h2>
+        <div class="review-based">
+          <h3 class="review-based__title">Excellent</h3>
+          <div class="review-based__stars">
+            <img src="./images/Star-x2.svg" alt="" class="review-based__star" />
+            <img src="./images/Star-x2.svg" alt="" class="review-based__star" />
+            <img src="./images/Star-x2.svg" alt="" class="review-based__star" />
+            <img src="./images/Star-x2.svg" alt="" class="review-based__star" />
+            <img src="./images/Star-x2.svg" alt="" class="review-based__star" />
+          </div>
+          <p class="review-based__subtitle">
+            Based on <a href="#" class="review-based__link"> 456 reviews </a>
+          </p>
+          <p class="review-based__frame">
+            <img src="./images/Shape.svg" alt="" class="review-based__shape" />
+            Trustpilot
+          </p>
+        </div>
+      </section>
     </div>
   </body>
 </html>
