--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="#" class="navigation__logo"
           ><img src="./images/logo.svg" alt="" class="navigation__logo-image" />Sid</a
         >
-        <div class="navigation__menu-items">
+        <ul class="navigation__menu-items">
           <a href="#" class="navigation__menu-item"
             >Shop <img src="./images/Expand.svg" alt="" class="navigation__menu-icon"
           /></a>
@@ -21,8 +21,8 @@
           <a href="#" class="navigation__menu-item">Compare</a>
           <a href="#" class="navigation__menu-item">FAQs</a>
           <a href="#" class="navigation__menu-item">Contact</a>
-        </div>
-        <div class="navigation__icons">
+        </ul>
+        <ul class="navigation__icons">
           <a href="#" class="navigation__icon-link"
             ><img src="./images/Search.svg" alt="" class="navigation__icon"
           /></a>
@@ -33,27 +33,30 @@
             ><img src="./images/Cart.svg" alt="" class="navigation__icon" />
             <h3 class="navigation__in-cart">1</h3>
           </a>
-        </div>
+        </ul>
       </header>
       <section class="product-information">
         <div class="product-information__left-side">
           <div class="product-information__images">
-            <div class="product-information__thumbnails">
+            <ul class="product-information__thumbnails">
               <img src="./images/Thumbnail-1.svg" alt="" class="product-information__thumbnail" />
               <img src="./images/Thumbnail-2.svg" alt="" class="product-information__thumbnail" />
-              <img src="./images/Thumbnail-3.svg" alt="" class="product-information__thumbnail" />
               <img src="./images/Thumbnail-4.svg" alt="" class="product-information__thumbnail" />
               <img src="./images/Thumbnail-5.svg" alt="" class="product-information__thumbnail" />
-            </div>
-            <img src="./images/Thumbnail-1.svg" alt="" class="product-information__main-image" />
+            </ul>
+            <img
+              src="./images/Thumbnail-1.svg"
+              alt=""
+              class="product-information__main-thumbnail"
+            />
           </div>
           <div class="product-information__tabs">
             <div class="product-information__tab">
-              <a href="#" class="product-information__tab-list">
-                <h2 class="product-information__tab-name">Description</h2>
+              <a href="#" class="product-information__tab-opener">
+                <h2 class="product-information__tab-title">Description</h2>
                 <img src="./images/minus.svg" alt="" class="product-information__tab-status" />
               </a>
-              <p class="product-information__tab-text">
+              <p class="product-information__tab-description">
                 Your full frame journey begins with the Z 5. Simple yet sophisticated, compact yet
                 powerful, the Z 5 is built to grow with you. It’s everything you’d expect from a
                 full frame mirrorless camera—intense detail, expansive views, brilliant low light
@@ -62,24 +65,24 @@
               </p>
             </div>
             <div class="product-information__tab">
-              <a href="#" class="product-information__tab-list">
-                <h2 class="product-information__tab-name">Tech Specs</h2>
+              <a href="#" class="product-information__tab-opener">
+                <h2 class="product-information__tab-title">Tech Specs</h2>
                 <img src="./images/plus.svg" alt="" class="product-information__tab-status" />
               </a>
             </div>
             <div class="product-information__tab">
-              <a href="#" class="product-information__tab-list">
-                <h2 class="product-information__tab-name">Shipping & Warranty</h2>
+              <a href="#" class="product-information__tab-opener">
+                <h2 class="product-information__tab-title">Shipping & Warranty</h2>
                 <img src="./images/plus.svg" alt="" class="product-information__tab-status" />
               </a>
             </div>
           </div>
         </div>
         <div class="product-information__right-side">
-          <div class="product-information__name-reviews">
-            <h1 class="product-information__name">Nikon Z5</h1>
+          <div class="product-information__name-and-reviews">
+            <h1 class="product-information__product-name">Nikon Z5</h1>
             <a href="#" class="product-information__reviews">
-              <p class="product-information__reviews-number">4.2 (1653)</p>
+              <p class="product-information__reviews-estimation">4.2 (1653)</p>
               <img src="./images/star.svg" alt="" class="product-information__reviews-star" />
               <img src="./images/star.svg" alt="" class="product-information__reviews-star" />
               <img src="./images/star.svg" alt="" class="product-information__reviews-star" />
@@ -90,9 +93,11 @@
             $899 <span class="product-information__old-price">$1,099.95</span>
           </p>
           <div class="product-information__options-menu">
-            <p class="product-information__options">Options</p>
+            <p class="product-information__options-title">Options</p>
             <div class="product-information__option-btns">
-              <a href="#" class="product-information__option-btn option-btn_active"
+              <a
+                href="#"
+                class="product-information__option-btn product-information__option-btn_black"
                 >Z 5 Body Only</a
               >
               <a href="#" class="product-information__option-btn">24-50mm Lens Kit</a>
@@ -101,6 +106,7 @@
               <div class="product-information__instock-quantity"></div>
               <p class="product-information__instock-currently">Currently In Stock</p>
             </div>
+
             <div class="product-information__featured-specs">
               <div class="product-information__feature">
                 <img src="./images/Chip.svg" alt="" class="product-information__feature-icon" />
@@ -131,40 +137,42 @@
               <a href="#" class="product-information__feature-view-all">View All Tech Specs</a>
             </div>
             <div class="product-information__btns">
-              <a href="#" class="product-information__cart-btn">Add To Cart</a>
-              <a href="#" class="product-information__buy-btn">Buy It Now</a>
-            </div>
-            <div class="product-information__features">
-              <a href="#" class="product-information__feature"
-                ><img
-                  src="./images/Help.svg"
-                  alt=""
-                  class="product-information__feature-image"
-                />Got any questions?
-                <span class="product-information__feature-span">Contact us</span></a
+              <a href="#" class="product-information__btn product-information__btn-cart"
+                >Add To Cart</a
               >
-              <p class="product-information__feature">
+              <a href="#" class="product-information__btn product-information__btn-buy"
+                >Buy It Now</a
+              >
+            </div>
+            <ul class="product-information__menu">
+              <a href="#" class="product-information__menu-item"
+                ><img src="./images/Help.svg" alt="" class="product-information__menu-image" />Got
+                any questions?&nbsp;<span class="product-information__menu-span"
+                  >Contact us</span
+                ></a
+              >
+              <p class="product-information__menu-item">
                 <img
                   src="./images/shiping.svg"
                   alt=""
-                  class="product-information__feature-image"
+                  class="product-information__menu-image"
                 />Free Shipping over $150
               </p>
-              <a href="#" class="product-information__feature"
-                ><img src="./images/share.svg" alt="" class="product-information__feature-image" />
+              <a href="#" class="product-information__menu-item"
+                ><img src="./images/share.svg" alt="" class="product-information__menu-image" />
                 Share
               </a>
-            </div>
+            </ul>
           </div>
         </div>
       </section>
       <section class="promo-marquee">
-        <h2 class="promo-marquee__text">USE&#160;CODE&#160;FRIDAY50&#160;FOR&#160;50%&#160;OFF</h2>
-        <h2 class="promo-marquee__text">USE&#160;CODE&#160;FRIDAY50&#160;FOR&#160;50%&#160;OFF</h2>
-        <h2 class="promo-marquee__text">USE&#160;CODE&#160;FRIDAY50&#160;FOR&#160;50%&#160;OFF</h2>
-        <h2 class="promo-marquee__text">USE&#160;CODE&#160;FRIDAY50&#160;FOR&#160;50%&#160;OFF</h2>
-        <h2 class="promo-marquee__text">USE&#160;CODE&#160;FRIDAY50&#160;FOR&#160;50%&#160;OFF</h2>
-        <h2 class="promo-marquee__text">USE&#160;CODE&#160;FRIDAY50&#160;FOR&#160;50%&#160;OFF</h2>
+        <h2 class="promo-marquee__text">USE CODE FRIDAY50 FOR& 50% OFF</h2>
+        <h2 class="promo-marquee__text">USE CODE FRIDAY50 FOR& 50% OFF</h2>
+        <h2 class="promo-marquee__text">USE CODE FRIDAY50 FOR& 50% OFF</h2>
+        <h2 class="promo-marquee__text">USE CODE FRIDAY50 FOR& 50% OFF</h2>
+        <h2 class="promo-marquee__text">USE CODE FRIDAY50 FOR& 50% OFF</h2>
+        <h2 class="promo-marquee__text">USE CODE FRIDAY50 FOR& 50% OFF</h2>
       </section>
       <section class="included">
         <h2 class="included__title">What’s included</h2>
@@ -189,8 +197,8 @@
       </section>
       <section class="promo">
         <div class="promo__copy">
-          <h3 class="promo__title">Expand your creative playground</h3>
-          <p class="promo__paraghraph">
+          <h3 class="promo__copy-title">Expand your creative playground</h3>
+          <p class="promo__copy-paraghraph">
             Your full frame journey begins with the Z 5. Simple yet sophisticated, compact yet
             powerful, the Z 5 is built to grow with you. It’s everything you’d expect from a full
             frame mirrorless camera—intense detail, expansive views, brilliant low light
@@ -198,8 +206,9 @@
             limits of your creativity.
           </p>
         </div>
-        <img src="./images/promo.png" alt="" class="promo__image" />
+        <img src="./images/promo.png" alt="" class="promo__copy-image" />
       </section>
+      <!---->
       <section class="extra-promo">
         <div class="extra-prommo__card">
           <img src="./images/Chip.png" alt="" class="extra-prommo__image" />
@@ -230,25 +239,119 @@
           </p>
         </div>
       </section>
+      <!---->
       <section class="reviews">
         <h2 class="reviews__title">Don’t take our word for it</h2>
-        <div class="review-based">
-          <h3 class="review-based__title">Excellent</h3>
-          <div class="review-based__stars">
-            <img src="./images/Star-x2.svg" alt="" class="review-based__star" />
-            <img src="./images/Star-x2.svg" alt="" class="review-based__star" />
-            <img src="./images/Star-x2.svg" alt="" class="review-based__star" />
-            <img src="./images/Star-x2.svg" alt="" class="review-based__star" />
-            <img src="./images/Star-x2.svg" alt="" class="review-based__star" />
+        <div class="reviews__items">
+          <div class="review-based">
+            <h3 class="review-based__title">Excellent</h3>
+            <div class="review-based__stars">
+              <img src="./images/Star-x2.svg" alt="" class="review-based__star" />
+              <img src="./images/Star-x2.svg" alt="" class="review-based__star" />
+              <img src="./images/Star-x2.svg" alt="" class="review-based__star" />
+              <img src="./images/Star-x2.svg" alt="" class="review-based__star" />
+              <img src="./images/Star-x2.svg" alt="" class="review-based__star" />
+            </div>
+            <p class="review-based__subtitle">
+              Based on <a href="#" class="review-based__link"> 456 reviews </a>
+            </p>
+            <p class="review-based__frame">
+              <img src="./images/Shape.svg" alt="" class="review-based__shape" />
+              Trustpilot
+            </p>
           </div>
-          <p class="review-based__subtitle">
-            Based on <a href="#" class="review-based__link"> 456 reviews </a>
-          </p>
-          <p class="review-based__frame">
-            <img src="./images/Shape.svg" alt="" class="review-based__shape" />
-            Trustpilot
-          </p>
+          <a href="#" class="rewiev">
+            <div class="rewiev__rating">
+              <div class="rewiev__rating-stars">
+                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
+              </div>
+              <h3 class="rewiev__days-ago">2 days ago</h3>
+            </div>
+            <h3 class="review__title">Best on the market</h3>
+            <p class="review__coment">
+              I love this product because the support is great. Please ...
+            </p>
+            <div class="review__divider"></div>
+            <h4 class="review__name">Worldtraveler</h4>
+          </a>
+          <a href="#" class="rewiev">
+            <div class="rewiev__rating">
+              <div class="rewiev__rating-stars">
+                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
+              </div>
+              <h3 class="rewiev__days-ago">2 days ago</h3>
+            </div>
+            <h3 class="review__title">Best on the market</h3>
+            <p class="review__coment">
+              I love this product because the support is great. Please ...
+            </p>
+            <div class="review__divider"></div>
+            <h4 class="review__name">Worldtraveler</h4>
+          </a>
+          <a href="#" class="rewiev">
+            <div class="rewiev__rating">
+              <div class="rewiev__rating-stars">
+                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
+              </div>
+              <h3 class="rewiev__days-ago">2 days ago</h3>
+            </div>
+            <h3 class="review__title">Best on the market</h3>
+            <p class="review__coment">
+              I love this product because the support is great. Please ...
+            </p>
+            <div class="review__divider"></div>
+            <h4 class="review__name">Worldtraveler</h4>
+          </a>
+          <a href="#" class="rewiev">
+            <div class="rewiev__rating">
+              <div class="rewiev__rating-stars">
+                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
+              </div>
+              <h3 class="rewiev__days-ago">2 days ago</h3>
+            </div>
+            <h3 class="review__title">Best on the market</h3>
+            <p class="review__coment">
+              I love this product because the support is great. Please ...
+            </p>
+            <div class="review__divider"></div>
+            <h4 class="review__name">Worldtraveler</h4>
+          </a>
+          <a href="#" class="rewiev">
+            <div class="rewiev__rating">
+              <div class="rewiev__rating-stars">
+                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
+              </div>
+              <h3 class="rewiev__days-ago">2 days ago</h3>
+            </div>
+            <h3 class="review__title">Best on the market</h3>
+            <p class="review__coment">
+              I love this product because the support is great. Please ...
+            </p>
+            <div class="review__divider"></div>
+            <h4 class="review__name">Worldtraveler</h4>
+          </a>
         </div>
+        <a href="#" class="review__write-btn">Write a review</a>
       </section>
     </div>
   </body>
