--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         >
         <ul class="navigation__menu-items">
           <a href="#" class="navigation__menu-item"
-            >Shop <img src="./images/Expand.svg" alt="" class="navigation__menu-icon"
+            >Shop <img src="./images/expand.svg" alt="" class="navigation__menu-icon"
           /></a>
           <a href="#" class="navigation__menu-item">About us</a>
           <a href="#" class="navigation__menu-item">Compare</a>
@@ -24,13 +24,13 @@
         </ul>
         <ul class="navigation__icons">
           <a href="#" class="navigation__icon-link"
-            ><img src="./images/Search.svg" alt="" class="navigation__icon"
+            ><img src="./images/search.svg" alt="" class="navigation__icon"
           /></a>
           <a href="#" class="navigation__icon-link"
-            ><img src="./images/User.svg" alt="" class="navigation__icon"
+            ><img src="./images/user.svg" alt="" class="navigation__icon"
           /></a>
           <a href="#" class="navigation__icon-link"
-            ><img src="./images/Cart.svg" alt="" class="navigation__icon" />
+            ><img src="./images/cart.svg" alt="" class="navigation__icon" />
             <h3 class="navigation__in-cart">1</h3>
           </a>
         </ul>
@@ -41,8 +41,8 @@
             <ul class="product-information__thumbnails">
               <img src="./images/Thumbnail-1.svg" alt="" class="product-information__thumbnail" />
               <img src="./images/Thumbnail-2.svg" alt="" class="product-information__thumbnail" />
+              <img src="./images/Thumbnail-3.svg" alt="" class="product-information__thumbnail" />
               <img src="./images/Thumbnail-4.svg" alt="" class="product-information__thumbnail" />
-              <img src="./images/Thumbnail-5.svg" alt="" class="product-information__thumbnail" />
             </ul>
             <img
               src="./images/Thumbnail-1.svg"
@@ -83,10 +83,19 @@
             <h1 class="product-information__product-name">Nikon Z5</h1>
             <a href="#" class="product-information__reviews">
               <p class="product-information__reviews-estimation">4.2 (1653)</p>
-              <img src="./images/star.svg" alt="" class="product-information__reviews-star" />
-              <img src="./images/star.svg" alt="" class="product-information__reviews-star" />
-              <img src="./images/star.svg" alt="" class="product-information__reviews-star" />
-              <img src="./images/star.svg" alt="" class="product-information__reviews-star"
+              <img
+                src="./images/yellow-star.svg"
+                alt=""
+                class="product-information__reviews-star" />
+              <img
+                src="./images/yellow-star.svg"
+                alt=""
+                class="product-information__reviews-star" />
+              <img
+                src="./images/yellow-star.svg"
+                alt=""
+                class="product-information__reviews-star" />
+              <img src="./images/yellow-star.svg" alt="" class="product-information__reviews-star"
             /></a>
           </div>
           <p class="product-information__price">
@@ -109,12 +118,16 @@
 
             <div class="product-information__featured-specs">
               <div class="product-information__feature">
-                <img src="./images/Chip.svg" alt="" class="product-information__feature-icon" />
+                <img
+                  src="./images/mini-chip.svg"
+                  alt=""
+                  class="product-information__feature-icon"
+                />
                 <p class="product-information__feature-text">Expeed 6 Chip</p>
               </div>
               <div class="product-information__feature">
                 <img
-                  src="./images/objective.svg"
+                  src="./images/mini-objective.svg"
                   alt=""
                   class="product-information__feature-icon"
                 />
@@ -122,14 +135,18 @@
               </div>
               <div class="product-information__feature">
                 <img
-                  src="./images/megapixels 1.svg"
+                  src="./images/mini-megapixels.svg"
                   alt=""
                   class="product-information__feature-icon"
                 />
                 <p class="product-information__feature-text">24.3 million Effective Pixels</p>
               </div>
               <div class="product-information__feature">
-                <img src="./images/Battery.svg" alt="" class="product-information__feature-icon" />
+                <img
+                  src="./images/mini-battery.svg"
+                  alt=""
+                  class="product-information__feature-icon"
+                />
                 <p class="product-information__feature-text">
                   EN-EL15c rechargeable Li-ion battery
                 </p>
@@ -146,7 +163,7 @@
             </div>
             <ul class="product-information__menu">
               <a href="#" class="product-information__menu-item"
-                ><img src="./images/Help.svg" alt="" class="product-information__menu-image" />Got
+                ><img src="./images/help.svg" alt="" class="product-information__menu-image" />Got
                 any questions?&nbsp;<span class="product-information__menu-span"
                   >Contact us</span
                 ></a
@@ -178,27 +195,27 @@
         <h2 class="included__title">What’s included</h2>
         <div class="included__items">
           <div class="included__item">
-            <img src="./images/DSLR.svg" alt="" class="included__img" />
+            <img src="./images/nikon.svg" alt="" class="included__img" />
             <h3 class="included__name">Nikon Z5</h3>
           </div>
           <div class="included__item">
-            <img src="./images/lens20mm.svg" alt="" class="included__img" />
+            <img src="./images/lens-20mm.svg" alt="" class="included__img" />
             <h3 class="included__name">20mm Lens</h3>
           </div>
           <div class="included__item">
-            <img src="./images/Charger.svg" alt="" class="included__img" />
+            <img src="./images/charger.svg" alt="" class="included__img" />
             <h3 class="included__name">Charging Cable</h3>
           </div>
           <div class="included__item">
-            <img src="./images/Adobe Stock.svg" alt="" class="included__img" />
+            <img src="./images/adobe.svg" alt="" class="included__img" />
             <h3 class="included__name">Adobe Stock Subscription</h3>
           </div>
         </div>
       </section>
       <section class="promo">
         <div class="promo__copy">
-          <h3 class="promo__copy-title">Expand your creative playground</h3>
-          <p class="promo__copy-paraghraph">
+          <h3 class="promo__title">Expand your creative playground</h3>
+          <p class="promo__paraghraph">
             Your full frame journey begins with the Z 5. Simple yet sophisticated, compact yet
             powerful, the Z 5 is built to grow with you. It’s everything you’d expect from a full
             frame mirrorless camera—intense detail, expansive views, brilliant low light
@@ -206,21 +223,21 @@
             limits of your creativity.
           </p>
         </div>
-        <img src="./images/promo.png" alt="" class="promo__copy-image" />
+        <img src="./images/promo.png" alt="" class="promo__image" />
       </section>
-      <!---->
       <section class="extra-promo">
-        <div class="extra-prommo__card">
-          <img src="./images/Chip.png" alt="" class="extra-prommo__image" />
+        <div class="extra-promo__card">
+          <img src="./images/chip.png" alt="" class="extra-promo__image" />
           <h3 class="extra-promo__title">Super powered.</h3>
           <p class="extra-promo__paragraph">
-            Z 5 is powered by Nikon’s fast, comprehensive EXPEED 6 image processing system. It’s the
-            secret behind the camera’s sensational photo and video quality, autofocus performance,
-            low-light capabilities, distortion control, image clarity, color reproduction and more.
+            Z 5 is powered by Nikon&#8217;s fast, comprehensive EXPEED 6 image processing system.
+            It’s the secret behind the camera&#8217;s sensational photo and video quality, autofocus
+            performance, low-light capabilities, distortion control, image clarity, color
+            reproduction and more.
           </p>
         </div>
-        <div class="extra-prommo__card">
-          <img src="./images/Sutter-Speed.png" alt="" class="extra-prommo__image" />
+        <div class="extra-promo__card">
+          <img src="./images/sutter-speed.png" alt="" class="extra-promo__image" />
           <h3 class="extra-promo__title">The stability you crave.</h3>
           <p class="extra-promo__paragraph">
             Sharpness starts with stability, and Z 5 has one of the best in-camera image
@@ -228,30 +245,29 @@
             stabilization—up to five stops* of stabilization in up to five directions
           </p>
         </div>
-        <div class="extra-prommo__card">
-          <img src="./images/Stability.png" alt="" class="extra-prommo__image" />
+        <div class="extra-promo__card">
+          <img src="./images/stability.png" alt="" class="extra-promo__image" />
           <h3 class="extra-promo__title">In the blink of an iris.</h3>
           <p class="extra-promo__paragraph">
             Freeze time with shutter speeds as fast as 1/8000 of a second—fast enough to capture
             moments invisible to the naked eye. When shooting with wide aperture settings for
             shallow depth-of-field and blurred backgrounds, that speed can also be used to control
-            your shot’s brightness.
+            your shot&#8217;s brightness.
           </p>
         </div>
       </section>
-      <!---->
       <section class="reviews">
-        <h2 class="reviews__title">Don’t take our word for it</h2>
+        <h2 class="reviews__title">Don&#8217;t take our word for it</h2>
         <div class="reviews__items">
           <div class="review-based">
             <h3 class="review-based__title">Excellent</h3>
-            <div class="review-based__stars">
-              <img src="./images/Star-x2.svg" alt="" class="review-based__star" />
-              <img src="./images/Star-x2.svg" alt="" class="review-based__star" />
-              <img src="./images/Star-x2.svg" alt="" class="review-based__star" />
-              <img src="./images/Star-x2.svg" alt="" class="review-based__star" />
-              <img src="./images/Star-x2.svg" alt="" class="review-based__star" />
-            </div>
+            <ul class="review-based__stars-list">
+              <img src="./images/green-star.svg" alt="" class="review-based__star" />
+              <img src="./images/green-star.svg" alt="" class="review-based__star" />
+              <img src="./images/green-star.svg" alt="" class="review-based__star" />
+              <img src="./images/green-star.svg" alt="" class="review-based__star" />
+              <img src="./images/green-star.svg" alt="" class="review-based__star" />
+            </ul>
             <p class="review-based__subtitle">
               Based on <a href="#" class="review-based__link"> 456 reviews </a>
             </p>
@@ -262,13 +278,13 @@
           </div>
           <a href="#" class="rewiev">
             <div class="rewiev__rating">
-              <div class="rewiev__rating-stars">
-                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
-              </div>
+              <ul class="rewiev__stars-list">
+                <img src="./images/rating.svg" alt="" class="rewiev__star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__star" />
+              </ul>
               <h3 class="rewiev__days-ago">2 days ago</h3>
             </div>
             <h3 class="review__title">Best on the market</h3>
@@ -280,13 +296,13 @@
           </a>
           <a href="#" class="rewiev">
             <div class="rewiev__rating">
-              <div class="rewiev__rating-stars">
-                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
-              </div>
+              <ul class="rewiev__stars-list">
+                <img src="./images/rating.svg" alt="" class="rewiev__star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__star" />
+              </ul>
               <h3 class="rewiev__days-ago">2 days ago</h3>
             </div>
             <h3 class="review__title">Best on the market</h3>
@@ -298,13 +314,13 @@
           </a>
           <a href="#" class="rewiev">
             <div class="rewiev__rating">
-              <div class="rewiev__rating-stars">
-                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
-              </div>
+              <ul class="rewiev__stars-list">
+                <img src="./images/rating.svg" alt="" class="rewiev__star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__star" />
+              </ul>
               <h3 class="rewiev__days-ago">2 days ago</h3>
             </div>
             <h3 class="review__title">Best on the market</h3>
@@ -316,13 +332,13 @@
           </a>
           <a href="#" class="rewiev">
             <div class="rewiev__rating">
-              <div class="rewiev__rating-stars">
-                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
-              </div>
+              <ul class="rewiev__stars-list">
+                <img src="./images/rating.svg" alt="" class="rewiev__star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__star" />
+              </ul>
               <h3 class="rewiev__days-ago">2 days ago</h3>
             </div>
             <h3 class="review__title">Best on the market</h3>
@@ -334,13 +350,13 @@
           </a>
           <a href="#" class="rewiev">
             <div class="rewiev__rating">
-              <div class="rewiev__rating-stars">
-                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__rating-star" />
-              </div>
+              <ul class="rewiev__stars-list">
+                <img src="./images/rating.svg" alt="" class="rewiev__star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__star" />
+                <img src="./images/rating.svg" alt="" class="rewiev__star" />
+              </ul>
               <h3 class="rewiev__days-ago">2 days ago</h3>
             </div>
             <h3 class="review__title">Best on the market</h3>
